# website-v3

./: .gitignore  README.md  package.json
.github/workflows/: deploy.yml
api/: Cargo.toml  Dockerfile
api/.github/workflows/: deploy.yml
api/src/: auth.rs  main.rs
api/src/notion/: mod.rs  raw.rs  tasks.rs
api/src/strava/: activities.rs  cache.rs  challenge.rs  event.rs  mod.rs  token.rs
api/src/things/: cache.rs  event.rs
content/: next.config.js  package.json
content/src/: app.html
content/src/components/index/: Logo.tsx  Nav.tsx
content/src/lib/: card.svelte  head.svelte  polylineSVG.svelte
content/src/lib/index/: card.svelte  map.svelte
content/src/lib/index/name/: name.svelte
content/src/lib/index/nav/: logo.svelte  name.svelte  nav.svelte  social.svelte
content/src/pages/: index.tsx
content/src/routes/: +page.server.ts  +page.svelte
content/src/routes/logo/: +page.svelte
content/src/routes/test/: +page.server.ts  +page.svelte
content/src/styles/: main.css
scraper/: .env  .env.blank  Dockerfile  go.mod  go.sum  main.go
scraper/pkg/config/: env.go
scraper/pkg/strava/: activity.go  challenge.go  strava.go  token.go  update.go
scraper/pkg/util/: error.go
scrapers/strava/: Cargo.toml
scrapers/strava/src/: activities.rs  cache.rs  challenge.rs  event.rs  main.rs  token.rs
src/: app.html
src/lib/index/: card.svelte
src/lib/index/nav/: logo.svelte
src/lib/index/strava/: activities.ts  graph.svelte  strava.svelte
src/routes/: +page.server.ts
src/routes/logo/: +page.svelte
strava/: Cargo.toml
(+7 files in other folders)
