[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
notion = "0.5.1"
reqwest = { version = "0.11.13", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.151"
serde_json = "1.0.94"
things3 = "0.0.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
