[package]
name = "strava"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.13", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.151"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
